# kalshi-analysis

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yml  docker-compose.yml
.codecov/: test-reporting-config.md
.githooks/: run-mypy.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
.serena/: project.yml
.serena/memories/: architecture_critical_decisions.md  backend_implementation_complete.md  backend_testing_implementation.md  data_models_schema.md  frontend_architecture.md  frontend_refinements.md  implementation_plan.md  phase1_backend_complete.md  phase1_complete_implementation.md  phase1_implementation_complete.md  phase1_implementation_summary.md  project_overview.md
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250103_1200_001_initial_schema.py  20251005_0143_413e47bb0bb2_add_account_integration_tables.py
backend/api/v1/: __init__.py  account.py  backtests.py  markets.py
backend/core/: config.py  exceptions.py
backend/domain/models/: __init__.py  account.py  backtest.py  market.py
backend/domain/repositories/: __init__.py  backtest.py  base.py  market.py
backend/infrastructure/database/: base.py  session.py
backend/infrastructure/kalshi/: authenticated_client.py  client.py  websocket_client.py
backend/infrastructure/polling/: gap_filler.py  poller.py
backend/schemas/: __init__.py  account.py  backtest.py  market.py
backend/services/account/: __init__.py  credential_manager.py  position_tracker.py
backend/tests/: conftest.py  test_websocket_integration.py
backend/tests/integration/: test_account_api.py  test_markets_api.py
backend/tests/unit/: test_backtest_repository.py  test_credential_manager.py  test_kalshi_client.py  test_market_repository.py
claudedocs/: phase1-implementation-status.md  research_codecov_pr_comments_20251004.md
docs/: ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md  PHASE1_COMPLETION_CHECKLIST.md  PHASE2_IMPLEMENTATION.md  account-dashboard-spec.md  architecture-account-integration.md  architecture-overview.md  implementation-checklist.md  phase-1-architecture.md  phase-1-implementation-progress.md  phase-2-architecture.md
docs/archive/: README.md  kalshi-hybrid-sdk-architecture.md  kalshi-integration-patterns.md  kalshi-mvp-implementation-plan.md  system-architecture-design.md
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
notebooks/: 01_data_exploration.ipynb  02_strategy_backtest.ipynb  03_calibration_analysis.ipynb  04_strategy_optimization.ipynb  README.md  pytest.ini  requirements.txt
(+29 files in other folders)
